feat: enhance login security with dynamic dummy hash and masked logging, refactor speed read achievement calculation, and improve session/book validation.